--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <nav>
             <ul class="links">
                 <li><a href="home.html" >Home</a></li>
-                <li><a href="About.html">Aboutus</a></li>
+                <li><a href="about.html">Aboutus</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact us</a></li>
